--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="row">
   <div class="col-sm-4"></div>
   <div class="col-sm-4">
@@ -42,4 +42,36 @@
       <div class="col-sm-4"></div>
     </div>
   </div>
+
+<h1>Componente Selecciones</h1>
+<div *ngIf="mostrarComponente">
+  papa = {{contadorDesdePapa}}
+  <app-seleccion [contador]="contadorDesdePapa" (cambioElContador)="actualizarContador($event)"></app-seleccion>
+</div>
+<button class="btn btn-info" (click)="mostrarComponente = !mostrarComponente"> cambiar mostrar Seleccion</button>
+<button class="btn btn-success" (click)="contadorDesdePapa = contadorDesdePapa + 1">Aumentar valor de contador</button>
+-->
+<div class="fondo">
+  <div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8"> <h2 class="titulo">¿Quién está viendo ahora?</h2></div>
+    <div class="col-sm-2"></div>
+  </div>
+  <div class="row">
+    <!--Componente-->
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2">
+      <app-seleccion
+      [texto]="'tatis1909'"
+      [imagen]="'/assets/perfil.png'">
+    </app-seleccion></div>
+    <div class="col-sm-1"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4"><p class="perfiles">Administrar Perfiles</div>
+    <div class="col-sm-4"></div>
+  </div>
+</div>
+
 
